terraform/globo_web_app/instances.tf
resource "aws_instance" "nginx-instance-1" {
  ami                    = nonsensitive(data.aws_ssm_parameter.ami.value)
  instance_type          = var.ecs_instance_type
  subnet_id              = aws_subnet.subnet1.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]

  tags = local.common_tags

  user_data = <<EOF
                #! /bin/bash
                sudo amazon-linux-extras install -y nginx1
                sudo service nginx start
                sudo rm /usr/share/nginx/html/index.html
                echo '<html><head><title>Taco Team Server 1</title></head><body style=\"background-color:#1F778D\"><p style=\"text-align: center;\"><span style=\"color:#FFFFFF;\"><span style=\"font-size:28px;\">You did it! Have a &#127790;</span></span></p></body></html>' | sudo tee /usr/share/nginx/html/index.html
              EOF

}

resource "aws_instance" "nginx-instance-2" {
  ami                    = nonsensitive(data.aws_ssm_parameter.ami.value)
  instance_type          = var.ecs_instance_type
  subnet_id              = aws_subnet.subnet2.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]

  tags = local.common_tags

  user_data = <<EOF
                #! /bin/bash
                sudo amazon-linux-extras install -y nginx1
                sudo service nginx start
                sudo rm /usr/share/nginx/html/index.html
                echo '<html><head><title>Taco Team Server 2</title></head><body style=\"background-color:#1F778D\"><p style=\"text-align: center;\"><span style=\"color:#FFFFFF;\"><span style=\"font-size:28px;\">You did it! Have a &#127790;</span></span></p></body></html>' | sudo tee /usr/share/nginx/html/index.html
              EOF

}
